// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleFieldset should render a collapsed fieldset (header only) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={false}
    header={
      Array [
        Object {
          "label": "Jimmy, Somsanith, park avenue",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <div>
      <p
        className="help-block"
        id="my-fieldset-description"
      >
        This is description
      </p>
    </div>
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "firstname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "lastname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "key": Array [
                    "addressLine",
                  ],
                  "title": "Address line",
                },
                Object {
                  "key": Array [
                    "postCode",
                  ],
                  "title": "Post code",
                },
              ],
              "key": Array [
                "details.address[]",
              ],
              "title": "Primary address",
              "widget": "collapsibleFieldset",
            },
          ],
          "key": Array [
            "details.address",
          ],
          "schema": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
          "title": "Address",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;

exports[`CollapsibleFieldset should render a custom title 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={true}
    header={
      Array [
        Object {
          "label": "Basic: Jimmy Somsanith",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <div>
      <p
        className="help-block"
        id="my-fieldset-description"
      >
        This is description
      </p>
    </div>
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "firstname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "lastname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "key": Array [
                    "addressLine",
                  ],
                  "title": "Address line",
                },
                Object {
                  "key": Array [
                    "postCode",
                  ],
                  "title": "Post code",
                },
              ],
              "key": Array [
                "details.address[]",
              ],
              "title": "Primary address",
              "widget": "collapsibleFieldset",
            },
          ],
          "key": Array [
            "details.address",
          ],
          "schema": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
          "title": "Address",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;

exports[`CollapsibleFieldset should render a full fieldset (header and body) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={true}
    header={
      Array [
        Object {
          "label": "Jimmy, Somsanith, park avenue",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <div>
      <p
        className="help-block"
        id="my-fieldset-description"
      >
        This is description
      </p>
    </div>
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "firstname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "lastname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "key": Array [
                    "addressLine",
                  ],
                  "title": "Address line",
                },
                Object {
                  "key": Array [
                    "postCode",
                  ],
                  "title": "Post code",
                },
              ],
              "key": Array [
                "details.address[]",
              ],
              "title": "Primary address",
              "widget": "collapsibleFieldset",
            },
          ],
          "key": Array [
            "details.address",
          ],
          "schema": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
          "title": "Address",
        }
      }
      value={
        Object {
          "addressLine": "park avenue",
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;

exports[`CollapsibleFieldset should render without value 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={true}
    header={
      Array [
        Object {
          "label": "Primary address",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <div>
      <p
        className="help-block"
        id="my-fieldset-description"
      >
        This is description
      </p>
    </div>
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "firstname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "FirstName",
          "type": "string",
        }
      }
      value={
        Object {
          "isClosed": undefined,
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "lastname",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "LastName",
          "type": "string",
        }
      }
      value={
        Object {
          "isClosed": undefined,
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "key": Array [
                    "addressLine",
                  ],
                  "title": "Address line",
                },
                Object {
                  "key": Array [
                    "postCode",
                  ],
                  "title": "Post code",
                },
              ],
              "key": Array [
                "details.address[]",
              ],
              "title": "Primary address",
              "widget": "collapsibleFieldset",
            },
          ],
          "key": Array [
            "details.address",
          ],
          "schema": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
          "title": "Address",
        }
      }
      value={
        Object {
          "isClosed": undefined,
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;
